[gd_scene load_steps=15 format=2]

[ext_resource path="res://textures/characters/seu bento velho/seu_bento_vovo_frames.res" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/characters/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/debug_character.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/Footsteps.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 6 )

[sub_resource type="Animation" id=2]
loop = true

[sub_resource type="Animation" id=3]
loop = true

[sub_resource type="Animation" id=4]
loop = true

[sub_resource type="Animation" id=5]
loop = true

[sub_resource type="Animation" id=6]
length = 0.8
loop = true

[sub_resource type="Animation" id=7]
length = 0.8
loop = true

[sub_resource type="Animation" id=8]
length = 0.8
loop = true

[sub_resource type="Animation" id=9]
length = 0.8
loop = true

[sub_resource type="CapsuleShape2D" id=10]
radius = 15.0
height = 0.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
WALK_SPEED = 150

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -27 )
frames = ExtResource( 1 )
animation = "walk_right"
playing = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="anims" type="AnimationPlayer" parent="."]
anims/idle_down = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/walk_down = SubResource( 6 )
anims/walk_left = SubResource( 7 )
anims/walk_right = SubResource( 8 )
anims/walk_up = SubResource( 9 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 0, -24 )
current = true

[node name="debug" parent="." instance=ExtResource( 3 )]
path_to_node = NodePath("..")
properties = [ "linear_vel", "roll_direction", "facing" ]
enabled = false

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.8

[node name="InteractingArea" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractingArea"]
shape = SubResource( 10 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="area_entered" from="InteractingArea" to="." method="_on_InteractingArea_area_entered"]
[connection signal="area_exited" from="InteractingArea" to="." method="_on_InteractingArea_area_exited"]
